--- a/portfolio/templates/portafolio/main.html
+++ b/portfolio/templates/portafolio/main.html
@@ -5,8 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'portfolio/main.css' %}">
-    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="{% static 'portafolio/main.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Kevin Yepes | Portfolio</title>
 </head>
@@ -25,7 +24,7 @@
             <div class="picture-profile">
                 <h1>Kevin Yepes</h1>
                 <h2>Software Development Analyst</h2>
-                <img src="../data/me.jfif" alt="profile">
+                <img src="{% static 'data/me.jfif' %}" alt="profile">
             </div>
             <p>Beyond my technical core, I am a firm believer in continuous evolution. I am always eager to dive into
                 new technologies, whether it's mastering advanced Cloud Computing architectures, exploring the latest in
