--- a/portfolio/templates/portafolio/main.html
+++ b/portfolio/templates/portafolio/main.html
@@ -137,7 +137,7 @@
                     <i class="fa-solid fa-envelope"></i> [GMAIL]
                 </a>
 
-                <a href="https://www.linkedin.com/in/keviinyepes/?locale=en-US" target="_blank" class="retro-btn">
+                <a href="www.linkedin.com/in/keviinyepes" target="_blank" class="retro-btn">
                     <i class="fa-brands fa-linkedin"></i> [LINKEDIN]
                 </a>
 
